Upgraded code to eco 6.25.0