@@ -108,8 +108,7 @@ public class CustomEnchantLookup {
 
                 if (slot != EnchantmentTarget.Slot.ANY) {
                     if (!enchant.getTargets().stream()
-                            .map(EnchantmentTarget::getSlot)
-                            .collect(Collectors.toList())
+                            .map(EnchantmentTarget::getSlot).toList()
                             .contains(slot)) {
                         continue;
                     }
